# http-server

./: Cargo.toml  README.md
src/: handler.rs  main.rs  request.rs  response.rs  utils.rs
static/: somefile.html
