[package]
name = "simple-http-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.0", features = ["full"] }
rand = "0.8.5"
chrono = "0.4.38"
sha1 = "0.10.6"
base64 = "0.22.1"

